# basic-calculator

./: .gitignore  CLAUDE.md  README.md  calculator.py  pyproject.toml  readme.md  requirements.txt
.claude/skills/error-handling/: SKILL.md
.claude/skills/frontend-design/: SKILL.md
.claude/skills/frontend-design-modern-aesthetic/: SKILL.md
.claude/skills/testing-strategy/: SKILL.md
.claude/skills/vercel-deployment/: SKILL.md
.specify/memory/: constitution.md
history/adr/: 001-python-cli-calculator-architecture.md  002-expression-evaluation-approach.md  003-error-handling-strategy.md  004-cli-interface-design.md
history/prompts/001-cli-calculator/: 001-cli-calculator-spec.spec.prompt.md  001-implementation-complete.general.prompt.md  002-git-workflow-commit-pr.misc.prompt.md  003-cli-calculator-spec.plan.prompt.md  004-create-requirements-quality-checklist.plan.prompt.md  006-generate-tasks-for-cli-calculator.tasks.prompt.md  007-update-spec-cli-only-with-gui-future.tasks.prompt.md  008-fix-spec-plan-tasks-alignment.issues.prompt.md  01-cli-calculator-spec.spec.prompt.md  02-git-workflow-commit-pr.misc.prompt.md  03-cli-calculator-spec.plan.prompt.md  (+5 more)
specs/001-cli-calculator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/01-python-cli-calculator/: spec.md
src/: calculator.py
src/calculator/: cli.py  core.py  parser.py
src/cli/: calculator.py
src/lib/: calculator.py
src/tests/: test_calculator.py  test_cli.py  test_parser.py
tests/integration/: test_cli.py
tests/unit/: test_calculator.py
(+49 files in other folders)
